# knowwhere-poc

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  TEST_REPORT.md  check_daily_log_gaps.py  dimtest.py  dimtest_256d_results.json  dimtest_auto.py  dimtest_results.json  embed_summaries.py  filter_chunks.py  hermes_env.py  inject_subconscious.py  knowwhere-nightly.sh  knowwhere-schema.sql  knowwhere_db.py  kw_injection.py  poc.py  pyproject.toml  resummarize_nightlies.py  retrieve_summaries.py  summarize_today.py  summary_pipeline.py  test_cross_session.py  test_outcome_loop.py  test_pipeline.py
.cursor/rules/: 00-agent-guardrails.mdc  01-karpathy-reasoning.mdc  02-project-principles.mdc  03-code-style.mdc
.wrangler/cache/: pages.json  wrangler-account.json
hermes-plugin/knowwhere/: __init__.py  plugin.yaml
knowwhere/: __init__.py  _knowwhere_db.py  _summary_pipeline.py  cli.py  db.py  injection.py  pipeline.py  schema.sql
knowwhere/hermes_plugin/: __init__.py  plugin.yaml
knowwhere/providers/: __init__.py  storage.py
scripts/: eval_cross_session_outcome.py  install_plugin.sh
