[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowwhere"
version = "0.7.1"
description = "Subconscious memory layer for AI agents — automatic cross-session context injection"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{name = "Nimar Moradbakhti", email = "nimar@moradbakhti.de"}]
keywords = ["ai", "memory", "agents", "llm", "rag", "subconscious"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]
all = ["knowwhere[embeddings,openai,dev]"]

[project.scripts]
knowwhere = "knowwhere.cli:main"

[project.urls]
Homepage = "https://github.com/Jind0la/knowwhere-poc"
Documentation = "https://github.com/Jind0la/knowwhere-poc#readme"
Repository = "https://github.com/Jind0la/knowwhere-poc"
Issues = "https://github.com/Jind0la/knowwhere-poc/issues"

[tool.setuptools.packages.find]
include = ["knowwhere*"]

[tool.setuptools.package-data]
knowwhere = ["schema.sql", "hermes_plugin/*", "hermes_plugin/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
